@@ -1,5 +1,10 @@
 2007-11-14  Alan McGovern <alan.mcgovern@gmail.com> 
 
+	* src/FileSystem.cs, src/Base/CameraFilesystem.cs: That should be ulong, not
+	  'long'
+
+2007-11-14  Alan McGovern <alan.mcgovern@gmail.com> 
+
 	* src/libgphoto2-sharp.dll.config: make the -sharp binding require
 	  libgphoto2.so.6
 
